--- a/src/app/products/details/details.component.css
+++ b/src/app/products/details/details.component.css
@@ -1,3 +1,41 @@
+.game-grid {
+  width: 100%;
+  height: 100vh; /* Adjust the height to your preference */
+  margin: 0;
+  padding: 24px;
+}
 
+.game-image {
+  width: 100%;
+  height: auto;
+}
+
+.game-info {
+  padding: 16px;
+}
+
+.game-description {
+  background-color: #f5f5f5;
+}
+
+.game-actions {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.game-consoles {
+  align-self: flex-end;
+  background-color: #f5f5f5;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+h3 {
+  margin-top: 0;
+  margin-bottom: 8px;
+}
 
 /*# sourceMappingURL=details.component.css.map */
