--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -1,32 +1,34 @@
 <!-- Card to display details info -->
-<mat-card class="mat-elevation-z4" *ngIf="product">
-  <mat-card-header>
-    <mat-card-title>Product Details</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-grid-list cols="2" rowHeight="2:1">
-      <mat-grid-tile colspan="2">
-        <img src="{{product.imageUrl}}" alt="product image" />
-      </mat-grid-tile>
-      <mat-grid-tile colspan="2">
-        <h2>{{product.title}}</h2>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <h3>{{product.price | currency: 'USD': 'symbol'}}</h3>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <h3>{{product.rating}} stars</h3>
-      </mat-grid-tile>
-      <mat-grid-tile colspan="2">
-        <p>{{product.description}}</p>
-      </mat-grid-tile>
+<a mat-button color="primary" class="back-button" [routerLink]="['../../']">Back to List</a>
 
-      // Grid tile to display publisher
-      <mat-grid-tile colspan="2">
-        <h4>Publisher: {{product.publisher}}</h4>
-      </mat-grid-tile>
-
-
-    </mat-grid-list>
-  </mat-card-content>
-</mat-card>
+<ng-container *ngIf="product">
+	<mat-grid-list cols="2" rowHeight="200px" class="game-grid">
+		<mat-grid-tile colspan="1" rowspan="2">
+			<img [src]="product.imageUrl" alt="Game Image" class="game-image">
+		</mat-grid-tile>
+		<mat-grid-tile colspan="1" rowspan="1">
+			<div class="game-info">
+				<h2>{{ product.title }}</h2>
+				<p><strong>Release Date:</strong> {{ product.releaseDate }}</p>
+				<p><strong>Publisher:</strong> {{ product.publisher }}</p>
+				<p><strong>Rating:</strong> {{ product.rating }}</p>
+				<p><strong>Price:</strong> {{ product.price | currency }}</p>
+			</div>
+		</mat-grid-tile>
+		<mat-grid-tile colspan="1" rowspan="1" class="game-description">
+			<div class="game-info">
+				<h3>Description</h3>
+				<p>{{ product.description }}</p>
+			</div>
+		</mat-grid-tile>
+		<mat-grid-tile colspan="2" rowspan="1" class="game-consoles">
+			<div class="game-info">
+				<h3>Consoles</h3>
+				<p>{{ product.consoles.join(', ') }}</p>
+			</div>
+		</mat-grid-tile>
+	</mat-grid-list>
+</ng-container>
+<ng-container *ngIf="!product">
+	<p>No product found.</p>
+</ng-container>
