--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,9 +1,11 @@
 <!-- games.component.html -->
-<table mat-table [dataSource]="gameData">
+<table mat-table style="margin-bottom: 64px" [dataSource]="gameData">
   <!-- Title Column -->
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef>Title</th>
-    <td mat-cell (click)="onGameSelect(game)" *matCellDef="let game">{{ game.title }}</td>
+    <td mat-cell *matCellDef="let game">
+			<a [routerLink]="['games', game.id]">{{ game.title }}</a>
+		</td>
   </ng-container>
 
   <!-- Rating Column -->
