--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -32,7 +32,7 @@
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let game">
       <button mat-icon-button (click)="likeGame(game)">
-        <mat-icon>thumb_up</mat-icon>
+        <mat-icon fontSet="material-icons-outlined">favorite</mat-icon>
       </button>
     </td>
   </ng-container>
