chore: changing to https

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <!-- games.component.html -->
-<table mat-table style="margin-bottom: 64px" [dataSource]="gameData">
+<table mat-table class="p-3" style="margin-bottom: 52px" [dataSource]="gameData">
   <!-- Title Column -->
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef>Title</th>
