--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,43 +1,48 @@
 <!-- games.component.html -->
-<table mat-table class="p-3" style="margin-bottom: 52px" [dataSource]="gameData">
-  <!-- Title Column -->
-  <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef>Title</th>
-    <td mat-cell *matCellDef="let game">
-			<a [routerLink]="['games', game.id]">{{ game.title }}</a>
-		</td>
-  </ng-container>
+<div class="container py-3">
+	<h3>Title Database</h3>
+	<table mat-table style="margin-bottom: 64px" [dataSource]="gameData">
+		<!-- Title Column -->
+		<ng-container matColumnDef="title">
+			<th mat-header-cell *matHeaderCellDef>Title</th>
+			<td mat-cell *matCellDef="let game">
+				<a [routerLink]="['games', game.id]">{{ game.title }}</a>
+			</td>
+		</ng-container>
 
-  <!-- Rating Column -->
-  <ng-container matColumnDef="rating">
-    <th mat-header-cell *matHeaderCellDef>Rating</th>
-    <td mat-cell *matCellDef="let game">{{ game.rating }}</td>
-  </ng-container>
+		<!-- Rating Column -->
+		<ng-container matColumnDef="rating">
+			<th mat-header-cell *matHeaderCellDef>Rating</th>
+			<td mat-cell *matCellDef="let game">{{ game.rating }}</td>
+		</ng-container>
 
-  <!-- Image Column -->
-  <ng-container matColumnDef="image">
-    <th mat-header-cell *matHeaderCellDef>Image</th>
-    <td mat-cell *matCellDef="let game">
-      <img src="{{ game.image_url }}" alt="{{ game.title }}" width="100" height="100">
-    </td>
-  </ng-container>
+		<!-- Image Column -->
+		<ng-container matColumnDef="image">
+			<th mat-header-cell *matHeaderCellDef>Image</th>
+			<td mat-cell *matCellDef="let game">
+				<img src="{{ game.imageUrl }}" alt="{{ game.title }}" width="100" height="100">
+			</td>
+		</ng-container>
 
-  <!-- Description Column -->
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let game">{{ game.description }}</td>
-  </ng-container>
+		<!-- Description Column -->
+		<ng-container matColumnDef="description">
+			<th mat-header-cell *matHeaderCellDef>Description</th>
+			<td mat-cell *matCellDef="let game">{{ game.description }}</td>
+		</ng-container>
 
-  <ng-container matColumnDef="like">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let game">
-      <button mat-icon-button (click)="likeGame(game)">
-        <mat-icon fontSet="material-icons-outlined">favorite</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+		<ng-container matColumnDef="like">
+			<th mat-header-cell *matHeaderCellDef></th>
+			<td mat-cell *matCellDef="let game">
+				<button mat-icon-button (click)="likeGame(game)">
+					<mat-icon color="primary">
+						{{game.liked ? 'favorite' : 'favorite_outline'}}
+					</mat-icon>
+				</button>
+			</td>
+		</ng-container>
 
-  <!-- Table Rows -->
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+		<!-- Table Rows -->
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	</table>
+</div>
