feat: displaying angular version

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,5 @@
 <!-- games.component.html -->
+<p>Loaded with: {{ngVersion}}</p>
 <div class="container py-3">
 	<h3>Title Database</h3>
 	<table mat-table style="margin-bottom: 64px" [dataSource]="gameData">
